<resources>
    <string name="app_name">Todo List</string>
    <string name="descriptionHintText">Descrição</string>
    <string name="addButtonLabel">Adicionar</string>
    <string name="removeButtonLabel">Remover</string>
    <string name="clearButtonLabel">Limpar</string>
    <string name="emailHintText">E-mail</string>
    <string name="passwordHintText">Senha</string>
    <string name="confirmPasswordHintText">Confirmar senha</string>
    <string name="loginButtonText">Entrar</string>
    <string name="googleLoginButtonText">Entrar com Google</string>
    <string name="registerButtonText">Registre-se!</string>
    <string name="registerAccountText">Não possui conta?</string>
    <string name="createAccountButtonText">Criar conta</string>
    <string name="loginAppBarTitle">Entrar</string>
    <string name="registerAppBarTitle">Criar Conta</string>
    <string name="homeAppBarTitle">Lista de Tarefas</string>
    <string name="profileAppBarTitle">Perfil</string>
    <string name="passwordMismatchError">As senhas não coincidem</string>
    <string name="userRegistrationFailedError">Falha ao criar usuário</string>
    <string name="loginFailedError">"Falha ao efetuar login"</string>
    <string name="homeButtonDescription">Tela inicial</string>
    <string name="nameHintText">Nome</string>
    <string name="profileUpdateButtonText">Atualizar Perfil</string>
    <string name="cameraFABDescription">Carregar imagem da câmera</string>
    <string name="profileLogoutButtonText">Sair da conta</string>
    <string name="navTasksTitle">Tarefas</string>
    <string name="navProfileTitle">Perfil</string>
    <string name="galleryFabDescription">Carregar imagem da galeria</string>
    <string name="newTaskDescriptionHintText">Descrição</string>
    <string name="newTaskTitleText">Nova Tarefa</string>
    <string name="newTaskDateHintText">Data</string>
    <string name="btnSaveText">Salvar</string>
    <string name="updateTaskText">Atualizar tarefa</string>
    <string name="dateButtonText">Data</string>
    <string name="googleRegisterButtonText">Registrar com Google</string>
    <string name="orText">OU</string>
    <string name="mandatoryEmailErrorText">Campo obrigatório</string>
    <string name="invalidEmailErrorText">E-mail inválido</string>
    <string name="weakPasswordText">Senha Fraca</string>
    <string name="mediumPasswordText">Senha Média</string>
    <string name="strongPasswordText">Senha Forte</string>
    <string name="veryStrongPasswordText">Senha Muito Forte</string>
    <string name="changePasswordButtonText">Alterar Senha</string>
    <string name="updatePasswordText">Atualizar Senha</string>
    <string name="passwordUpdateErrorText">Falha ao atualizar senha</string>
    <string name="forgotPasswordBtnText">Esqueci minha senha</string>
    <string name="forgotPasswordToolbarText">Esqueci minha Senha</string>
    <string name="forgotPasswordInstructions">Enviaremos um e-mail com instruções para redefinir sua senha para o endereço informado no campo abaixo.</string>
    <string name="sendEmailBtnText">Enviar E-mail</string>
    <string name="cameraPermissionGrantedText">Permissão de câmera concedida</string>
    <string name="cameraPermissionDeniedText">Permissão de câmera negada</string>
    <string name="galleryPermissionGrantedText">Permissão de galeria concedida</string>
    <string name="galleryPermissionDeniedText">Permissão de galeria negada</string>
    <string name="imageLoadErrorText">Falha ao carregar imagem</string>
    <string name="weatherTemperature">%s°C</string>
    <string name="weatherErrorText">Falha ao carregar dados de clima</string>
    <string name="unauthorizedNotificationText">Notificações não autorizadas</string>
    <string name="notificationScheduledText">Notificação agendada</string>
    <string name="taskCreatedText">Tarefa criada</string>
    <string name="taskCreatedMessageText">"A tarefa %s foi criada e expira dia %s"</string>
    <string name="taskUpdatedText">Tarefa atualizada</string>
    <string name="taskUpdatedMessageText">"Sua tarefa %s foi atualizada e expira dia %s"</string>
</resources>