<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.modules.main.SingleTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/newTaskAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/newTaskToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/newTaskTitleText"
            app:navigationIcon="@drawable/baseline_arrow_back_24">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/datePickerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newTaskAppBar"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editTxtDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/newTaskDescriptionHintText"
            android:inputType="textCapSentences" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTxtDescription"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editTxtDate"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="48dp"
                android:inputType="date"
                android:hint="@string/newTaskDateHintText"
                android:enabled="false" />
            <Button
                android:id="@+id/btnSelectDate"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dateButtonText"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datePickerLayout"
            android:text="@string/btnSaveText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>