<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.modules.profile.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/profileAppBarTitle">
            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_home_24"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/homeButtonDescription" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/profileImageLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">
        
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="56dp"
            android:background="@color/gray"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_photo_camera_24"
            app:tint="@color/white"
            android:layout_gravity="bottom|start"
            app:layout_anchor="@+id/profileImage"
            app:layout_anchorGravity="bottom|start"
            app:fabSize="normal"
            android:layout_marginTop="-28dp"
            android:layout_marginStart="78dp"
            android:contentDescription="@string/cameraFABDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_image_search_24"
            app:tint="@color/white"
            android:layout_gravity="bottom|end"
            app:layout_anchor="@+id/profileImage"
            app:layout_anchorGravity="bottom|end"
            app:fabSize="normal"
            android:layout_marginTop="-56dp"
            android:layout_marginEnd="78dp"
            android:contentDescription="@string/cameraFABDescription" />

        <LinearLayout
            android:id="@+id/profileForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <EditText
                android:id="@+id/editTextProfileEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHintText"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/nameHintText"
                android:inputType="textPersonName"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/lastNameHintText"
                android:inputType="textPersonName"
                android:importantForAutofill="no"/>
            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/profileUpdateButtonText"/>
            <Button
                android:id="@+id/btnProfileLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/profileLogoutButtonText"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>