<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.modules.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/homeAppBarTitle">
            <ImageView
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_exit_to_app_24"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                />
            <ImageView
                android:id="@+id/btnProfile"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:src="@drawable/baseline_person_24"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/editTxtDescription"
        android:hint="@string/descriptionHintText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        android:inputType="text" />
    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtDescription"
        app:layout_constraintBottom_toTopOf="@id/todosList"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <Button
            android:id="@+id/btnAdd"
            android:backgroundTint="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addButtonLabel"
            android:layout_weight="1"/>

<!--        Separator providing some space between buttons-->
        <View
            android:layout_width="2dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnRemove"
            android:backgroundTint="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/removeButtonLabel"
            android:layout_weight="1"/>

        <View
            android:layout_width="2dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnClear"
            android:backgroundTint="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearButtonLabel"
            android:layout_weight="1"/>
    </LinearLayout>

    <ListView
        android:id="@+id/todosList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>