<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.modules.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/registerAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/profileAppBarTitle">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/profileImageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerAppBar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:background="@drawable/circle_shape"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_photo_camera_24"
                app:tint="@color/white"
                android:layout_gravity="bottom|start"
                app:layout_anchor="@+id/profileImage"
                app:layout_anchorGravity="bottom|start"
                app:fabSize="normal"
                android:layout_marginTop="-28dp"
                android:layout_marginStart="78dp"
                android:contentDescription="@string/cameraFABDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_image_search_24"
                app:tint="@color/white"
                android:layout_gravity="bottom|end"
                app:layout_anchor="@+id/profileImage"
                app:layout_anchorGravity="bottom|end"
                app:fabSize="normal"
                android:layout_marginTop="-56dp"
                android:layout_marginEnd="78dp"
                android:contentDescription="@string/galleryFabDescription" />

            <LinearLayout
                android:id="@+id/profileForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <EditText
                    android:id="@+id/editTextProfileEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/emailHintText"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"/>
                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/nameHintText"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no"/>
                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/lastNameHintText"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no"/>
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/updateProfileBtnFragment"
                    android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintBottom_toTopOf="@id/editTextLastName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnProfileLogout"
                    tools:layout="@layout/fragment_custom_button" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/updatePasswordBtnFragment"
                    android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_custom_button"
                    app:layout_constraintBottom_toTopOf="@id/logoutBtnFragment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updateProfileBtnFragment"/>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/logoutBtnFragment"
                    android:name="br.com.bmsrangel.dev.todolist.app.core.components.CustomButtonFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintBottom_toTopOf="@id/updateProfileBtnFragment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:layout="@layout/fragment_custom_button" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>